# Computer-Vision-Experiments

./: .gitignore  README.md
1-contrast-and-subtraction/: 1-1.cpp  CMakeLists.txt  color.hpp
3-spatial-filtering/: 3-1.cpp  CMakeLists.txt
4-image-statistical-characteristics/: 4-1.cpp  CMakeLists.txt  mouse.hpp  tracker.hpp
5-image-structure/: 5-1.cpp  CMakeLists.txt
6-hough-transform/: 6-1.cpp  CMakeLists.txt
7-harris-detection/: 7-1.cpp  CMakeLists.txt
8-image-matching/: 8-1.cpp  CMakeLists.txt
9-matching-template/: 9-1.cpp  CMakeLists.txt
